Hotový header a tab Vzdelanie

--- a/mypage/webapp/i18n/i18n_en.properties
+++ b/mypage/webapp/i18n/i18n_en.properties
@@ -3,12 +3,12 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=O mne
+appTitle=My profile
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=O mne
+title=My profile
 
 HeaderTop=Ing. Matúš Humaj
 HeaderSubtitle=SAP ABAP & Fiori developer
