--- a/mypage/webapp/i18n/i18n_sk.properties
+++ b/mypage/webapp/i18n/i18n_sk.properties
@@ -15,7 +15,7 @@ HeaderSubtitle=SAP ABAP & Fiori vývojár
 Contact=Kontakt
 WhereDoILive=Kde bývam
 AboutMeShort=V krátkosti o mne
-AboutMeShortText=Volám sa Matúš, bývam v Žiline a od roku 2017 sa pohybujem vo svete SAPu ako ABAP vývojár a neskôr aj ako Fiori vývojár.\nPosledné roky sa sústreďujem na získavanie skúseností vo vývoji na S4/HANA. Viac informácií nájdete v sekciách nižšie.\nTúto stránku som vytvoril aby poskytovala základné informácie o mne a zvolil som OpenUI5 lebo... čo iné vybrať? ;)
+AboutMeShortText=Volám sa Matúš, bývam v Žiline a od roku 2017 sa pohybujem vo svete SAPu ako ABAP vývojár a neskôr aj ako Fiori vývojár.\nPosledné roky sa sústreďujem na získavanie skúseností vo vývoji na S4/HANA. Viac informácií nájdete v sekciách nižšie.\nTúto stránku som vytvoril (vo Fiori UI5) aby poskytovala základné informácie o mne.
 tabEducation=Vzdelanie
 tabWorkExperience=Pracovné skúsenosti a projekty
 tabCertifications=Certifikácie a Workshopy
