Pridané certifikácie a workshopy

--- a/mypage/webapp/i18n/i18n_sk.properties
+++ b/mypage/webapp/i18n/i18n_sk.properties
@@ -20,3 +20,5 @@ tabEducation=Vzdelanie
 tabWorkExperience=Pracovné skúsenosti a projekty
 tabCertifications=Certifikácie a Workshopy
 tabLanguages=Jazyky
+tabCertifikations=Certifikácie
+tabWorkshops=Workshopy
